syntax = "proto3";

package com.nebo.grpc.security;

option java_multiple_files = true;
option java_package = "com.nebo.grpc.lib";
option java_outer_classname = "SecurityProto";

service AuthenticationService{
  rpc authenticate(AuthenticationRequest) returns(UserCredentialResponse){
  }
}

message AuthenticationRequest {
  string token = 1;
}

message UserCredentialResponse {
  UserCredential user_credential = 1;
}

message UserCredential{
  int64 id = 1;
  string first_name = 3;
  string last_name = 4;
  repeated string permissions = 2;
}
